crash when moving keys in dopesheet editor *NEED MORE INFO* #28976

Closed
opened 2011-10-19 15:30:10 +02:00 by frantz bourain · 5 comments

%%%version of blender: official 2.59 ubuntu 11.10 64bits

open animatique-1.blend and try to move selected keys in the dopesheet editor.%%%

%%%version of blender: official 2.59 ubuntu 11.10 64bits open animatique-1.blend and try to move selected keys in the dopesheet editor.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%You're file doesn't come up with any keys selected in 2.59 or 2.60, pressing Gkey in action editor does nothing.

Can you give exact steps to redo this crash?

Also you could see if the bug is fixed 2.60 release.
http://download.blender.org/release/Blender2.60/%%%

%%%You're file doesn't come up with any keys selected in 2.59 or 2.60, pressing Gkey in action editor does nothing. Can you give exact steps to redo this crash? Also you could see if the bug is fixed 2.60 release. http://download.blender.org/release/Blender2.60/%%%

%%%Campbell, i've just downloaded this file and pressed Gkey in Dopesheet. Immediate crash. Crash happens in ActionFCurveToTransData because of fcu->totvert is non-zero, but fcu->bezt is null. Probably because curve was "backed" (fcu->fpt isn't null). I don't know this stuff well, so can't suggest anything about fix here.%%%

%%%Campbell, i've just downloaded this file and pressed Gkey in Dopesheet. Immediate crash. Crash happens in ActionFCurveToTransData because of fcu->totvert is non-zero, but fcu->bezt is null. Probably because curve was "backed" (fcu->fpt isn't null). I don't know this stuff well, so can't suggest anything about fix here.%%%
Member

%%%Fixed in svn.

Added matching check to the one used in the counting pass%%%

%%%Fixed in svn. Added matching check to the one used in the counting pass%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28976
No description provided.