Bugfix [#28976] crash when moving keys in dopesheet editor